
- GPR#987: alloc_sockaddr: don't assume a null terminator. It is not inserted
  on macOS by system calls that fill in a struct sockaddr (e.g. getsockname).
  (Anton Bachin)

- GPR#998: Do not delete unused closures in un_anf.ml.
  (Leo White)

- GPR#1019: Fix fatal error in Flambda mode "[functions] does not map set of
  closures ID" (Pierre Chambart, code review by Mark Shinwell and Leo White)

### Toplevel and debugger:

- PR#7060, GPR#1035: Print exceptions in installed custom printers
  (Tadeu Zagallo, review by David Allsopp)

Next minor version (4.04.1):
----------------------------

### Standard library:

- PR#7403, GPR#894: fix a bug in Set.map as introduced in 4.04.0
  (Gabriel Scherer, report by Thomas Leonard)

### Bug fixes

- PR#7405, GPR#903: s390x: Fix address of caml_raise_exn in native dynlink modules
  (Richard Jones, review by Xavier Leroy)

- MPR#7417, GPR#930: ensure 16 byte stack alignment inside caml_allocN on x86-64
  for ocaml build with WITH_FRAME_POINTERS defined
  (Christoph Cullmann)

- PR#7460, GPR#1011: catch uncaught exception when unknown files are passed
  as argument (regression in 4.04.0)
  (Bernhard Schommer, review by Florian Angeletti and Gabriel Scherer,
   report by Stephen Dolan)

- GPR#912: Fix segfault in Unix.create_process on Windows caused by wrong header
  configuration.
  (David Allsopp)

- GPR#980: add dynlink options to ocamlbytecomp.cmxa to allow ocamlopt.opt
  to load plugins. See http://github.com/OCamlPro/ocamlc-plugins for examples.
  (Fabrice Le Fessant, review by David Allsopp)

- GPR#992: caml-types.el: Fix missing format argument, so that it can show kind
  of call at point correctly.
  (Chunhui He)

OCaml 4.04.0 (4 Nov 2016):
--------------------------

(Changes that can break existing programs are marked with a "*")

### Language features:

- PR#7233: Support GADT equations on non-local abstract types
  (Jacques Garrigue)

- GPR#187, GPR#578: Local opening of modules in a pattern.